--- a/src/postcss/layout/_common.scss
+++ b/src/postcss/layout/_common.scss
@@ -1,22 +1,452 @@
-html {
-	height: 100%;
+.banner {
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	background-size: cover;
+	@include v-align(300px);
+	text-align: center;
+
+	.h1 {
+		color: $white;
+		margin: 0;
+		letter-spacing: 3px;
+
+		@include media('>=desktop') {
+			letter-spacing: 7px;
+		}
+
+		.chinese {
+			@include font(25px,30px,600);
+			display: block;
+			position: relative;
+			padding: 0 20px 10px;
+			margin-bottom: 10px;
+
+			@include media('>=tablet') {
+				@include font(28px,36px,600);
+				padding-bottom: 15px;
+				margin: 0 0 15px;
+			}
+
+			@include media('>=desktop') {
+				@include font(32px,40px,600);
+				padding-bottom: 22px;
+				margin: 0 0 19px;
+				letter-spacing: 10px;
+				min-width: 383px;
+			}
+
+			&:before {
+				content: '';
+				position: absolute;
+				left: 0;
+				right: 0;
+				width: 100%;
+				background: $white;
+				height: 3px;
+				bottom: 0;
+
+				@include media('>=desktop') {
+					height: 5px;
+				}
+			}
+		}
+	}
 }
 
-body {
-	height: 100%;
+.section {
+	padding: 30px 0;
+
+	@include media('>=tablet') {
+		padding: 40px 0;
+	}
+
+	@include media('>=desktop') {
+		padding: 60px 0;
+	}
+
+	@include media('>=widescreen') {
+		padding: 90px 0;
+	}
 }
 
-#wrapper {
+.two-columns {
+	@extend %clearfix;
+}
+
+.content {
+	@include media('>=tablet') {
+		float: left;
+		width: 70%;
+		padding-right: 20px;
+	}
+
+	@include media('>=widescreen') {
+		width: 67.7%;
+		padding-left: 0;
+	}
+
+	> .author {
+		margin:  0 0 29px;
+		display: block;
+	}
+
+	.img {
+		margin: 0 0 31px;
+		text-align: center;
+	}
+
+	.title {
+		display: block;
+		text-align: center;
+		@include font(14px,18px);
+		padding: 9px 0 0;
+	}
+
+}
+
+.blogs {
+	@include media('>=phone') {
+		max-width: 480px;
+		margin: 0 auto;
+	}
+
+	@include media('>=tablet') {
+		max-width: none;
+		margin: 0;
+	}
+}
+
+.blog {
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
+	border: 1px solid #eae8e8;
+	margin: 0 0 30px;
 	position: relative;
 	overflow: hidden;
-	width: 100%;
-	height: 100%;
-	display: table;
-	table-layout: fixed;
+
+	@include media('>=phone') {
+		margin: 0 0 24px;		
+	}
+
+	@include media('>=tablet') {
+		padding-left: 225px;
+	}
+
+	@include media('>=desktop') {
+		padding-left: 302px;
+	}
+
+	.img {
+		background-position: 50% 50%;
+		background-size: cover;
+		background-repeat: no-repeat;
+		height: 200px;
+
+		@include media('>=tablet') {
+			position: absolute;
+			left: 0;
+			top: 0;
+			bottom: 0;
+			width: 225px;
+			height: auto;
+		}
+
+		@include media('>=desktop') {
+			width: 302px;
+		}
+	}
+
+
+	.h2 {
+		margin: 0 0 20px;
+		@include font(18px,24px);
+
+		@include media('>=desktop') {
+			@include font(22px,28px);
+		}
+
+		@include media('>=desktop') {
+			
+			margin: 0 0 29px;
+		}
+
+		a {
+			color: $gray;
+
+			&:hover {
+				opacity: 0.7;
+			}
+		}
+	}
+
+	.description {
+		padding: 20px 15px;
+
+		@include media('>=desktop') {
+			padding: 24px 25px 27px;
+		}
+		
+
+
+	}
+
+	.author {
+		color: #6c6e70;
+		display: block;
+		@include font(14px,22px);
+	}
 }
 
-#footer {
-	height: 1%;
-	display: table-footer-group;
-	overflow: hidden;
+.sidebar {
+	padding: 30px 0;
+	max-width: 480px;
+	margin: 0 auto;
+	text-align: center;
+
+	@include media('>=tablet') {
+		max-width: none;
+		margin: 0;	
+		float: right;
+		width: 30%;
+		padding: 0;
+		text-align: left;
+	}
+
+	@include media('>=widescreen') {
+		width: 28.3%;
+		margin-top: -12px;
+		padding-right: 32px;
+	}
+
+	.h2 {
+		color: #1a7d3f;
+		border-bottom: 2px solid #1a7d3f;
+		padding-bottom: 3px;
+		margin: 0 0 15px;
+
+		@include media('>=desktop') {
+			padding-bottom: 14px;
+			border-bottom-width: 3px;
+			margin:  0 0 20px;
+		}
+	}
+}
+
+
+.article-list {
+	@extend %listreset;
+	margin: 0 0 11px;
+
+	li {
+		border-bottom: 1px solid #eae8e8;
+		padding: 7px 0;
+
+		@include media('>=tablet') {
+			margin: 0 0 9px;
+			padding: 0 0 21px;
+		}
+
+		&:last-child {
+			border: none;
+		}
+	}
+}
+
+
+.facebook-plugin {
+	margin: 0 0 20px;
+
+	@include media('>=desktop') {
+		margin:  0 0 34px;
+	}
+}
+
+
+.sidebar-post {
+	@include media('>=desktop') {
+		line-height: 24px;
+	}
+
+	p {
+		margin: 0 0 15px;
+
+		@include media('>=desktop') {
+			margin: 0 0 26px;
+		}
+	}
+}
+
+.comments {
+	padding: 20px 0;
+
+	@include media('>=tablet') {
+		padding: 40px 0;
+	}
+
+	@include media('>=desktop') {
+		padding: 58px 0 35px; 
+	}
+}
+
+.comment {
+	border-bottom: 1px solid #eae8e8;
+
+	@include media('>=tablet') {
+		padding: 15px 20px 0;
+	}
+
+	@include media('>=desktop') {
+		padding: 18px 35px 0;
+	}
+
+	.user {
+		@include size(85px);
+		border-radius: 50%;
+		overflow: hidden;
+
+		@include media('>=tablet') {
+			float: left;	
+		}
+
+		a {
+			display: block;
+			border-radius: 50%;
+
+			&:hover {
+				opacity: 0.7;
+			}
+
+			img {
+				max-width: none;
+				width: 100%;
+				border-radius: 50%;
+			}
+		}
+	}
+
+	.user-text {
+		overflow: hidden;
+		padding-left: 20px;
+	}
+
+	.user-name {
+		display: block;
+		margin: 0 0 9px;
+
+		a {
+			&:hover {
+				opacity: 0.7;
+			}
+		}
+	}
+}
+
+.btns {
+	border-bottom: 1px solid #eae8e8;
+	padding-bottom: 7px;
+
+
+	li {
+		margin: 0 0 5px;
+
+		@include media('>=tablet') {
+			display:inline-block;
+			vertical-align:top;
+			margin-right: 24px;
+			max-width: 232px;
+		}
+
+		a {
+			display:inline-block;
+			vertical-align:middle;
+			margin:  0 0 4px;
+
+			&:hover {
+				opacity: 0.7;
+			}
+		}
+
+		.text-info {
+			display:inline-block;
+			vertical-align:middle;
+			max-width: 128px;
+		}
+	}
+}
+
+.relative-blog {
+	max-width: 320px;
+	margin: 0 auto;
+
+	@include media('>=tablet') {
+		margin: 0;
+		max-width: 360px;
+	}
+
+	@include media('>=desktop') {
+		max-width: none;
+	}
+	> .h2 {
+		max-width: 300px;
+		color: #1a7d3f;
+		border-bottom: 2px solid #1a7d3f;
+		padding-bottom: 3px;
+		margin: 0 0 15px;
+
+		@include media('>=desktop') {
+			padding-bottom: 14px;
+			border-bottom-width: 3px;
+			margin:  0 0 20px;
+		}
+	}
+
+	.row {
+		@extend %listreset;
+
+		@include media('>=desktop') {
+			letter-spacing: -9px;
+			margin: 0 -15px;
+		}
+
+		.col {
+			
+			@include media('>=desktop') {
+				display:inline-block;
+				vertical-align:top;
+				width: 50%;
+				letter-spacing: 0;
+				padding: 0 15px;
+			}
+		}
+	}
+
+	.blog {
+		padding-left: 120px;
+
+		.img {
+			width: 120px;
+			margin: 0 ;
+		}
+
+		.label {
+			background: none;
+			color: #1a7d3f;
+			@include font(14px,18px);
+			display: block;
+			margin: 0 0 -1px;
+			padding: 0;
+		}
+
+		.description {
+			padding: 16px 15px;
+
+			@include media('>=desktop') {
+				padding: 16px 15px;
+			}
+		}
+
+		.h2 {
+			@include font(16px,20px);
+			margin: 0 0 9px;
+		}
+	}
 }
