--- a/src/postcss/layout/_footer.scss
+++ b/src/postcss/layout/_footer.scss
@@ -28,20 +28,25 @@
 	display: block;	
 	margin-bottom: 15px;
 	letter-spacing: 5px;
+	text-align: center;
 
 	@include media('>=tablet') {
 		margin-bottom: 25px;
+		text-align: left;
 	}
 }
 
 .footer-col {
 	padding: 20px 0;
-	
+	max-width: 290px;
+	margin: 0 auto;
 
 	@include media('>=tablet') {
 		float: left;
 		width: 50%;
 		padding: 40px 15px 25px;
+		max-width: none;
+		margin: 0;
 	}
 
 	@include media('>=desktop') {
@@ -139,6 +144,11 @@
 	@extend %listreset;
 	@include font(0,0);
 	margin: 0 -10px;
+	text-align: center;
+
+	@include media('>=tablet') {
+		text-align: left;
+	}
 
 	li {
 		display:inline-block;
