--- a/src/postcss/utilities/_media-queries.scss
+++ b/src/postcss/utilities/_media-queries.scss
@@ -38,6 +38,9 @@
 	@if $point == '<tablet' {
 	  @media (max-width: 767px)  { @content; }
 	}
+	@if $point == '>=phone' {
+	  @media (min-width: 480px)  { @content; }
+	}
 	@if $point == '>=tablet' {
 	  @media (min-width: 768px)  { @content; }
 	}
